Authenticated added for Customer
