# routes/index.js
@@ -13,4 +13,24 @@ router.get('/', (req, res) => {
     res.send('Home Page: Final CSE341 Project for group 9');
   });
 
+// can use this to log into get hub
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+// use this to clear our session and remove access  
+router.get('/logout', function(req, res, next) {
+  req.logout(function(err){
+    if (err) { 
+      return next(err);
+    }
+    // Clear the session user data to ensure the user is logged out
+    req.session.destroy(function(err) {
+      if (err) {
+        return next(err);
+      }
+      res.redirect('/');
+    });
+  });
+});
+
+
 module.exports = router;
